Updated config file template

--- a/MRC/auth_default.cfg
+++ b/MRC/auth_default.cfg
@@ -1,10 +1,10 @@
 [Twitter_Auth]
-api_key = ""
-api_secret_key = ""
-bearer_token = ""
-access_token = ""
-access_secret = ""
+api_key = 
+api_secret_key = 
+bearer_token = 
+access_token = 
+access_secret = 
 
 [AURIN_Auth]
-username = ""
-password = ""
+username = 
+password = 
