WIP Ansible Debug

--- a/MRC/host_vars/mrc.yaml
+++ b/MRC/host_vars/mrc.yaml
@@ -3,14 +3,9 @@ availability_zone: melbourne-qh2-uom
 
 # Volume
 volumes:
-  - vol_name: demo-vol-1-1
+  - vol_name: VM01-vol-1
     vol_size: 10
-  - vol_name: demo-vol-1-2
-    vol_size: 10
-  - vol_name: demo-vol-2-1
-    vol_size: 10
-  - vol_name: demo-vol-2-2
-    vol_size: 10
+    vol_desc: 'Volume for Harvester'
 
 # Security group
 security_groups:
@@ -29,11 +24,10 @@ security_groups:
 
 # Instance
 instances:
-  - name: demo-1
-    volumes: ['demo-vol-1-1', 'demo-vol-1-2']
-  - name: demo-2
-    volumes: ['demo-vol-2-1', 'demo-vol-2-2']
+  - name: VM01-harvester
+    volumes: 'VM01-vol-1'
 
+# NeCTAR Ubuntu 20.04 LTS (Focal) amd64
 instance_image: f8b79936-6616-4a22-b55d-0d0a1d27bceb
-instance_key_name: id-eresearch
-instance_flavor: uom.general.2c8g
+instance_key_name: MRC_SSH_Nic
+instance_flavor: uom.mse.2c9g
