--- a/MRC/mrc.yaml
+++ b/MRC/mrc.yaml
@@ -1,14 +1,12 @@
 - hosts: localhost
   vars:
-    ansible_python_interpreter: /usr/local/bin/python3
+    ansible_python_interpreter: auto
   vars_files:
     - host_vars/mrc.yaml
   gather_facts: true
 
   roles:
     - role: openstack-common
-    - role: openstack-images
     - role: openstack-volume
     - role: openstack-security-group
     - role: openstack-instance
-    - role: openstack-volume-snapshot
