--- a/MRC/roles/openstack-instance/tasks/main.yaml
+++ b/MRC/roles/openstack-instance/tasks/main.yaml
@@ -16,7 +16,8 @@
   loop: '{{ instances }}'
   register: os_instance
 
-- debug:
+- name: Debug mode
+  debug:
     msg: "Instance {{ item.openstack.name }} has been created. IP address is {{ item.openstack.public_v4 }}"
   loop: '{{ os_instance.results }}'
   when: item.openstack is defined
