--- a/MRC/roles/openstack-volume/tasks/main.yaml
+++ b/MRC/roles/openstack-volume/tasks/main.yaml
@@ -3,6 +3,7 @@
 - name: Create volume(s) on NeCTAR
   os_volume:
     display_name: '{{ item.vol_name }}'
+    display_description: '{{ item.vol_desc }}'
     size: '{{ item.vol_size }}'
     availability_zone: '{{ availability_zone }}'
     wait: yes
