--- a/MRC/roles/openstack-instance/tasks/main.yaml
+++ b/MRC/roles/openstack-instance/tasks/main.yaml
@@ -22,11 +22,11 @@
   loop: '{{ os_instance.results }}'
   when: item.openstack is defined
 
-- name: Wait for connection
-  wait_for:
-    host: "{{ item.openstack.public_v4 }}"
-    port: 22
-    timeout: 120
-    search_regex: OpenSSH
-  loop: '{{ os_instance.results }}'
-  when: item.openstack is defined
+# - name: Wait for connection
+#   wait_for:
+#     host: "{{ item.openstack.public_v4 }}"
+#     port: 22
+#     timeout: 120
+#     search_regex: OpenSSH
+#   loop: '{{ os_instance.results }}'
+#   when: item.openstack is defined
