--- a/Ansible/host_vars/mrc.yaml
+++ b/Ansible/host_vars/mrc.yaml
@@ -18,22 +18,26 @@ volumes:
 
 # Security group
 security_groups:
-  - name: demo_ssh
-    description: "Demo security group for SSH access"
+  - name: SSH_prod
+    description: "Security group for SSH access"
     protocol: tcp
     port_range_min: 22
     port_range_max: 22
     remote_ip_prefix: 0.0.0.0/0
-  - name: demo_http
-    description: "Demo security group for HTTP"
+  - name: HTTP_prod
+    description: "HTTP open to world"
     protocol: tcp
     port_range_min: 80
     port_range_max: 80
     remote_ip_prefix: 0.0.0.0/0
 
 # Instance
+# NOTE: Make sure instance names contain keyword:
+# Harvester : For harvester instances
+# CouchDB : For CouchDB instances
+# WebApp : For Web server instances
 instances:
-  - name: VM01-harvester
+  - name: VM01-Harvester
     volumes: 'HARVESTER-vol-1'
   - name: VM02-CouchDB-1
     volumes: 'DB-vol-1'
@@ -47,4 +51,9 @@ instances:
 # NeCTAR Ubuntu 20.04 LTS (Focal) amd64
 instance_image: f8b79936-6616-4a22-b55d-0d0a1d27bceb
 instance_key_name: MRC_SSH_Nic
-instance_flavor: uom.mse.1c4g
+
+# Flavor for harvesters and CouchDB instances
+instance_flavor: uom.mse.2c9g
+
+# Flavor for WebApp instances
+instance_webapp_flavor: uom.mse.1c4g
