--- a/MRC/auth_default.cfg
+++ b/MRC/auth_default.cfg
@@ -1,10 +1,10 @@
 [Twitter_Auth]
-api_key = 
-api_secret_key = 
-bearer_token = 
-access_token = 
-access_secret = 
+api_key = i7XgdsqBwzTSbfejnnvNbBoFR
+api_secret_key = t34PZwpWDurpSkcfnQX3FvfEfNnUYG7LYY6TJoikfRgjkFoZGy
+bearer_token = AAAAAAAAAAAAAAAAAAAAAGxLPQEAAAAA0gSe%2F%2F9qjW1BSdUxbGbaVZLE2%2Bg%3DvT9uvH8nimYQVwTrRry5AmdS6OFKI0VVPSoJG2D2aNycE8irAQ
+access_token = 437679061-phR9jizugJIZbjVFpakHAdPrOhDHR7xe33VlIrpW
+access_secret = z0Kfdckpjj8Q4EzwcYMqc6GAF28200yBj3P78hfyqLuvY
 
 [AURIN_Auth]
-username = 
-password = 
+username = student
+password = dj78dfGF
